--- a/A2.md
+++ b/A2.md
@@ -10,11 +10,21 @@
 > User stories organized by actor.
 > For each actor, a table containing a line for each user story, and for each user story: an identifier, a name, a priority, and a description (following the recommended structure).
 
-### 2.1. Actor 1
+### 2.1. Visitor
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:|:---------:|:-----------:|
+| US01        | Log in        | hight     |         |
 
-### 2.2. Actor 2
 
-### 2.N. Actor N
+### 2.2. User
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------:|
+| col 3 is    | right-aligned | $1600 |       |
+
+### 2.3. Administrator
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------:|
+| col 3 is    | right-aligned | $1600 |       |
 
 ## A1. Annex: Supplementary requirements
 
@@ -37,4 +47,4 @@ Changes made to the first submission:
 
 ***
 
-GROUP43
+GROUP43, 6/02/2018
