--- a/A2.md
+++ b/A2.md
@@ -13,7 +13,9 @@
 ### 2.1. Visitor
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:|:---------:|:-----------:|
-| US01        | Log in        | hight     |         |
+| US01        | Log in        | height     | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
+| US02        | Register      | height     | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
+| US03        | Home Page     | height     | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
 
 
 ### 2.2. User
