--- a/A2.md
+++ b/A2.md
@@ -1,14 +1,20 @@
 # A2: Actors and User stories
 
+This artifact contains the specification of the actors and their users stories, serving as agile documentation of project requirements.
+
 ## 1. Actors
 
+For the **project management**, the actors are represented in the figure below and described in the table.
+
 ![diagram](https://yuml.me/f11f9fdb.png)
-> Table identifying actors, including a brief description and examples.
+
+| Identifier | Description | Example |
+|:----------:|:-----------:|:-------:|
+| User | Generic user | Project developers |
+| Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
+| Administrator | Authenticated user, can manage users and projects | Admin |
 
 ## 2. User Stories
-
-> User stories organized by actor.
-> For each actor, a table containing a line for each user story, and for each user story: an identifier, a name, a priority, and a description (following the recommended structure).
 
 ### 2.1. Visitor
 | Identifier  | Name          | Priority  | Description |
