Updated Techinal Requirements and Business Rules

--- a/A2.md
+++ b/A2.md
@@ -1,27 +1,19 @@
 # A2: Actors and User stories
 
-This artifact contains the specification of the actors and their users stories, serving as agile documentation of project requirements.
-
 ## 1. Actors
 
-For the **project management**, the actors are represented in the figure below and described in the table.
-
 ![diagram](https://yuml.me/f11f9fdb.png)
-
-| Identifier | Description | Example |
-|:----------:|:-----------:|:-------:|
-| User | Generic user | Project developers |
-| Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
-| Administrator | Authenticated user, can manage users and projects | Admin |
+> Table identifying actors, including a brief description and examples.
 
 ## 2. User Stories
+
+> User stories organized by actor.
+> For each actor, a table containing a line for each user story, and for each user story: an identifier, a name, a priority, and a description (following the recommended structure).
 
 ### 2.1. Visitor
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:|:---------:|:-----------:|
-| US01        | Log in        | height     | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
-| US02        | Register      | height     | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
-| US03        | Home Page     | height     | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
+| US01        | Log in        | hight     |         |
 
 
 ### 2.2. User
@@ -40,11 +32,26 @@ For the **project management**, the actors are represented in the figure below a
 > For each subsection, a table containing identifiers, names, and descriptions for each requirement.
 
 ### A1.1. Business rules
+| Identifier  | Name          | Description |
+| :----------:|:-------------:|:-----------:|
+| BR01        |Each user can o|             |
 
 ### A1.2. Technical requirements
+| Identifier  | Name          | Description |
+|:-----------:|:-------------:|:-----------:|
+| TR01        |Usability      |The system should be simple and easy to use             |
+| TR02        |Performance    |The system should have very short response times             |
+| TR03        |Web Application|The system should be implemented as a Web Aplication with dynamic pages (HTML5, JavaScript, CSS3 and PHP)             |
+| TR04        |Portability    |The server side system should work on Mac OS and Windows             |
+| TR05        |Database       |Must use PostgreSQL database management             |
+| TR06        |Security       |System will protect information from unauthorised access through the use of an authentication and privilege verification system             |
+| TR07        |Scalability    |System must be prepared to deal with userbase growth and corresponding operations             |
+| TR03        |Ethics         |The system must respect the ethical principles in software development (for example, the password must be stored encrypted to ensure that only the owner knows it)    |
 
 ### A1.3. Restrictions
-
+| Identifier  | Name          | Description |
+| :----------:|:-------------:|:-----------:|
+| C01        |Deadline       |The system should be ready to be used at the beggining of the semester so the students can organize themselves as uickly as possible|
 ***
 
 ## Revision history
