--- a/A2.md
+++ b/A2.md
@@ -1,19 +1,32 @@
 # A2: Actors and User stories
 
+This artifact contains the specification of the actors and their users stories, serving as agile documentation of project requirements.
+
 ## 1. Actors
 
+For the **project management**, the actors are represented in the figure below and described in the table.
+
 ![diagram](https://yuml.me/f11f9fdb.png)
-> Table identifying actors, including a brief description and examples.
+
+Figure 1: actors.
+
+
+| Identifier | Description | Example |
+|:----------:|:-----------:|:-------:|
+| User | Generic user | Project developers |
+| Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
+| Administrator | Authenticated user, can manage users and projects | Admin |
+
+Table 1: Actor's description.
 
 ## 2. User Stories
-
-> User stories organized by actor.
-> For each actor, a table containing a line for each user story, and for each user story: an identifier, a name, a priority, and a description (following the recommended structure).
 
 ### 2.1. Visitor
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:|:---------:|:-----------:|
-| US01        | Log in        | hight     |         |
+| US01        | Log in        | height     | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
+| US02        | Register      | height     | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
+| US03        | Home Page     | height     | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
 
 
 ### 2.2. User
@@ -25,6 +38,7 @@
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------:|
 | col 3 is    | right-aligned | $1600 |       |
+
 
 ## A1. Annex: Supplementary requirements
 
