--- a/A2.md
+++ b/A2.md
@@ -58,7 +58,7 @@ Table 1: Actor's description.
 | TR03        |Web Application|The system should be implemented as a Web Aplication with dynamic pages (HTML5, JavaScript, CSS3 and PHP)             |
 | TR04        |Portability    |The server side system should work on Mac OS and Windows             |
 | TR05        |Database       |Must use PostgreSQL database management             |
-| TR06        |Security       |System will protect information from unauthorised access through the use of an authentication and privilege verification system             |
+| TR06        |Security       |System will protect information from unauthorised access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection,Password Storage, Cross-site Scripting)            |
 | TR07        |Scalability    |System must be prepared to deal with userbase growth and corresponding operations             |
 | TR03        |Ethics         |The system must respect the ethical principles in software development (for example, the password must be stored encrypted to ensure that only the owner knows it)    |
 
