--- a/A2.md
+++ b/A2.md
@@ -6,7 +6,7 @@ This artifact contains the specification of the actors and their users stories, 
 
 For the **project management**, the actors are represented in the figure below and described in the table.
 
-![diagram](https://yuml.me/f11f9fdb.png)
+![diagram](https://yuml.me/0ad81515.png)
 
 Figure 1: actors.
 
@@ -16,6 +16,7 @@ Figure 1: actors.
 | User | Generic user | Project developers |
 | Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
 | Administrator | Authenticated user, can manage users and projects | Admin |
+| Api | External API's that will be used to authenticate into the system | Google or Facebook login |
 
 Table 1: Actor's description.
 
