--- a/A2.md
+++ b/A2.md
@@ -49,7 +49,7 @@ Table 1: Actor's description.
 ### A1.1. Business rules
 | Identifier  | Name          | Description |
 | :----------:|:-------------:|:-----------|
-| BR01        |Each user can o|             |
+| BR01        | Link User-Project | User can create a new project or join others by invitation.            |
 
 ### A1.2. Technical requirements
 | Identifier  | Name          | Description |
