--- a/Artefacts/A1.md
+++ b/Artefacts/A1.md
@@ -2,7 +2,7 @@
 
 > The purpose of this project is to develop and promote a project management system available through the web for organizing and managing projects, allowing easy communication between team members and sustained by advertisement.
 
->Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication in order to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such that organizing and updating a project and it's tasks becomes a fast and easy process.
+>Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processses becomes fast and easy.
 
 >  Users may be associated with multiple projects. Each project has a team, task lists, and a discussion forum. Task lists can be organized into groups and each task can be commented on by other team members. There are only two types of permissions in the context of a project: the coordinator and the common users. The coordinator is allowed to add and remove team members, delete and edit all tasks, and moderate the discussion forum,
 
