Added team members info & updated business strat

--- a/Artefacts/A1.md
+++ b/Artefacts/A1.md
@@ -1,6 +1,6 @@
 # A1: PLENUM
 
-> The purpose of this project is to develop and promote a project management system available through the web for organizing and managing projects, allowing easy communication between team members and sustained by advertisement.
+> The purpose of this project is to develop and promote a project management system available through the web for organizing and managing projects, allowing easy communication between team members. It will be a freemium service, where users can choose to pay in order to get all the available features.
 
 >Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processses becomes fast and easy.
 
@@ -22,3 +22,8 @@ Changes made to the first submission:
 ***
 
 GROUP1743, 06/01/2018
+
+> Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
+> João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt   
+> Mário Rui Macedo Flores dos Santos, 201503406@fe.up.pt  
+> Mateus Pedroza Cortes Marques,  up201601876@fe.up.pt   
