Main features updated

--- a/Artefacts/A1.md
+++ b/Artefacts/A1.md
@@ -2,11 +2,12 @@
 
 > The purpose of this project is to develop and promote a project management system available through the web for organizing and managing projects, allowing easy communication between team members. It will be a freemium service, where users can choose to pay in order to get all the available features.
 
->Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processses becomes fast and easy.
+>Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processes becomes fast and easy.
 
->  Users may be associated with multiple projects. Each project has a team, task lists, and a discussion forum. Task lists can be organized into groups and each task can be commented on by other team members. There are only two types of permissions in the context of a project: the coordinator and the common users. The coordinator is allowed to add and remove team members, delete and edit all tasks, and moderate the discussion forum,
+>  Users may be associated with multiple projects. Each project has a team, task list, and a discussion forum. Individual tasks can be split into groups and each task can be commented by team members. Projects can be both public and free. In a project there can be only one owner who has the ability to select other administrators & transfer ownership.
+A administrator is allowed to add and remove team members, delete and edit all tasks, and finally moderate the discussion forum.
 
-> Finally the users will be placed into 3 categories with different permissions, visitors, users and administrators. Visitors can only view public projects, users have access to all of the features and administrators are able to ban users and delete content.
+> Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, users have access to all of the features and administrators are able to ban users and delete content.
 
 
 ***
