User profiles & removed extra lines

--- a/Artefacts/A1.md
+++ b/Artefacts/A1.md
@@ -7,8 +7,7 @@
 >  Users may be associated with multiple projects. Each project has a team, task list, and a discussion forum. Individual tasks can be split into groups and each task can be commented by team members. Projects can be both public and free. In a project there can be only one owner who has the ability to select other administrators & transfer ownership.
 A administrator is allowed to add and remove team members, delete and edit all tasks, and finally moderate the discussion forum.
 
-> Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, users have access to all of the features and administrators are able to ban users and delete content.
-
+> Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, but can't contribute to any of them. Users will  be able to contribute to their own projects or the ones they've been added. Website Administrators manage all projects, deleting or banning projects and user that doesn't comply to the terms of service.
 
 ***
 
@@ -17,7 +16,6 @@ A administrator is allowed to add and remove team members, delete and edit all t
 Changes made to the first submission:
 
 1. Item 1
-
 1. Item 2
 
 ***
