Fixing errors in A1

--- a/artifacts/A1.md
+++ b/artifacts/A1.md
@@ -5,7 +5,7 @@
 >Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processes becomes fast and easy.
 
 >  Users may be associated with multiple projects. Each project has a team, task list, and a discussion forum. Individual tasks can be split into groups and each task can be commented by team members. Projects can be both public and free. In a project there can be only one owner who has the ability to select other administrators & transfer ownership.
-A administrator is allowed to add and remove team members, delete and edit all tasks, and finally moderate the discussion forum.
+An administrator is allowed to add and remove team members, delete and edit all tasks, and finally moderate the discussion forum.
 
 > Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, but can't contribute to any of them. Users will  be able to contribute to their own projects or the ones they've been added. Website Administrators manage all projects, deleting or banning projects and user that doesn't comply to the terms of service.
 
@@ -24,5 +24,5 @@ GROUP1743, 11/02/2018
 
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
 > João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt   
-> Mário Rui Macedo Flores dos Santos, 201503406@fe.up.pt  
+> Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt  
 > Mateus Pedroza Cortes Marques,  up201601876@fe.up.pt   
