--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -13,10 +13,10 @@ Figure 1: actors.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
-| User | Generic user | Project developers |
+| User | Generic user | Projects developers and contributors |
 | Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
 | Administrator | Authenticated user, can manage users and projects | Admin |
-| Api | External API's that will be used to authenticate into the system | Google or Facebook login |
+| Api | External API's that will be used to register and authenticate into the system | Google or Facebook login |
 
 Table 1: Actor's description.
 
