--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -13,7 +13,7 @@ Figure 1: actors.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
-| User | Generic user | Projects developers and contributors |
+| User | Generic user, can create and contribute to projects | Projects developers and contributors |
 | Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
 | Administrator | Authenticated user, can manage users and projects | Admin |
 | Api | External API's that will be used to register and authenticate into the system | Google or Facebook login |
@@ -25,10 +25,17 @@ Table 1: Actor's description.
 ### 2.1. Visitor
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:|:---------:|:------------|
-| US01        | Log in        | height     | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
-| US02        | Register      | height     | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
-| US03        | Home Page     | height     | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
+| US01        | Log in        | high      | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
+| US02        | Register      | high      | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
+| US03        | Home Page     | high      | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
+| US04        | About page    | high      | As a Visitor, I want to access about page, so I can see the complete information about the website. |
+| US05        |  FAQ page     | high      | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
+| US06        | Contact page  | high      | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. 
+| US07        | Projects page | high      | As a Visitor, I want to access projects page, so I can see public projects.
+| US08        | API Log in    | low       | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
+| US09        | API Register   | low      | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
 
+Table 2: Visitor's user stories.
 
 ### 2.2. User
 | Identifier  | Name          | Priority  | Description |
