Some administrator US

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -45,8 +45,13 @@ Table 2: Visitor's user stories.
 ### 2.3. Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| col 3 is    | right-aligned | $1600 |       |
-
+| US00    | Create Projects | high | As a Administrator, I want to create open-source projects to all users.        |
+| US00    | Delete Projects | high | As a Administrator, I want to delete projects with inappropriate content.        |
+| US00    | Remove Comments | high | As a Administrator, I want to remove comments with inappropriate content/expressions.    |
+| US00    | Accept User     | high | As an Administrator, I want to accept the registration of a new system user, so that he can access restricted content.        |
+| US00    | Ban User        | high | As an Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.    |
+| US00    | Maintenance     | low | As an Administrator, I want to be able to interrupt all activity to maintenance purposes.    |
+| US00    | General Messages| low | As an Administrator, I want to send messages to all users.    |
 
 ## A1. Annex: Supplementary requirements
 
