--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -23,35 +23,35 @@ Table 1: Actor's description.
 ## 2. User Stories
 
 ### 2.1. Visitor
-| Identifier  | Name          | Priority  | Description |
+| Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
-| US01        | Log in        | high      | As an Visitor, I want to authenticate into the system, so that I can access privileged information.        |
-| US02        | Register      | high      | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.        |
-| US03        | Home Page     | high      | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
-| US04        | About page    | high      | As a Visitor, I want to access about page, so I can see the complete information about the website. |
-| US05        |  FAQ page     | high      | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
-| US06        | Contact page  | high      | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. 
-| US07        | Projects page | high      | As a Visitor, I want to access projects page, so I can see public projects.
-| US08        | API Log in    | low       | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
-| US09        | API Register   | low      | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
+| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
+| US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
+| US03 | Home Page | high | As a Visitor, I want to access home page, so that I can see a brief website's description.  |
+| US04 | About page | high | As a Visitor, I want to access about page, so I can see the complete information about the website. |
+| US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
+| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. 
+| US07 | Projects page | high | As a Visitor, I want to access projects page, so I can see public projects.
+| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
+| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
 
 Table 2: Visitor's user stories.
 
 ### 2.2. User
-| Identifier  | Name          | Priority  | Description |
+| Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| col 3 is    | right-aligned | $1600 |       |
+| col 3 is | right-aligned | $1600 | |
 
 ### 2.3. Administrator
-| Identifier  | Name          | Priority  | Description |
+| Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US00    | Create Projects | high | As a Administrator, I want to create open-source projects to all users.        |
-| US00    | Delete Projects | high | As a Administrator, I want to delete projects with inappropriate content.        |
-| US00    | Remove Comments | high | As a Administrator, I want to remove comments with inappropriate content/expressions.    |
-| US00    | Accept User     | high | As an Administrator, I want to accept the registration of a new system user, so that he can access restricted content.        |
-| US00    | Ban User        | high | As an Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.    |
-| US00    | Maintenance     | low | As an Administrator, I want to be able to interrupt all activity to maintenance purposes.    |
-| US00    | General Messages| low | As an Administrator, I want to send messages to all users.    |
+| US00 | Create Projects | high | As a Administrator, I want to create open-source projects to all users.  |
+| US00 | Delete Projects | high | As a Administrator, I want to delete projects with inappropriate content.  |
+| US00 | Remove Comments | high | As a Administrator, I want to remove comments with inappropriate content/expressions.  |
+| US00 | Accept User | high | As an Administrator, I want to accept the registration of a new system user, so that he can access restricted content.  |
+| US00 | Ban User | high | As an Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.  |
+| US00 | Maintenance | low | As an Administrator, I want to be able to interrupt all activity to maintenance purposes.  |
+| US00 | General Messages| low | As an Administrator, I want to send messages to all users.  |
 
 ## A1. Annex: Supplementary requirements
 
@@ -59,26 +59,27 @@ Table 2: Visitor's user stories.
 > For each subsection, a table containing identifiers, names, and descriptions for each requirement.
 
 ### A1.1. Business rules
-| Identifier  | Name          | Description |
+| Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
-| BR01        | Link User-Project | User can create a new project or join others by invitation.            |
+| BR01 | Link User-Project | User can create a new project or join others by invitation.  |
+| BR02 | | |
 
 ### A1.2. Technical requirements
-| Identifier  | Name          | Description |
+| Identifier | Name | Description |
 |:-----------:|:-------------:|:-----------|
-| TR01        |Usability      |The system should be simple and easy to use             |
-| TR02        |Performance    |The system should have very short response times             |
-| TR03        |Web Application|The system should be implemented as a Web Aplication with dynamic pages (HTML5, JavaScript, CSS3 and PHP)             |
-| TR04        |Portability    |The server side system should work on Mac OS and Windows             |
-| TR05        |Database       |Must use PostgreSQL database management             |
-| TR06        |Security       |System will protect information from unauthorised access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection,Password Storage, Cross-site Scripting)            |
-| TR07        |Scalability    |System must be prepared to deal with userbase growth and corresponding operations             |
-| TR03        |Ethics         |The system must respect the ethical principles in software development (for example, the password must be stored encrypted to ensure that only the owner knows it)    |
+| TR01 |Usability |The system should be simple and easy to use |
+| TR02 |Performance |The system should have very short response times |
+| TR03 |Web Application|The system should be implemented as a Web Application with dynamic pages (HTML5, JavaScript, CSS3 and PHP) |
+| TR04 |Portability |The server side system should work on Mac OS and Windows |
+| TR05 |Database |Must use PostgreSQL database management |
+| TR06 |Security |System will protect information from unauthorized access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection, Password Storage, Cross-site Scripting) |
+| TR07 |Capability |System must be prepared to deal with user base growth and corresponding operations |
+| TR08 |Ethics |The system must respect the ethical principles in software development (for example, the password must be stored encrypted to ensure that only the owner knows it) |
 
 ### A1.3. Restrictions
-| Identifier  | Name          | Description |
+| Identifier | Name | Description |
 | :----------:|:-------------:|:----------- |
-| C01        |Deadline       |The system should be ready to be used at the beggining of the semester so the students can organize themselves as uickly as possible|
+| C01 |Deadline |The system should be ready to be used at the beginning of the semester so the students can organize themselves as quickly as possible|
 ***
 
 ## Revision history
