--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -30,7 +30,7 @@ Table 1: Actor's description.
 | US03        | Home Page     | high      | As a Visitor, I want to access home page, so that I can see a brief website's description.        |
 | US04        | About page    | high      | As a Visitor, I want to access about page, so I can see the complete information about the website. |
 | US05        |  FAQ page     | high      | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
-| US06        | Contact page  | high      | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. 
+| US06        | Contact page  | high      | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to.
 | US07        | Projects page | high      | As a Visitor, I want to access projects page, so I can see public projects.
 | US08        | API Log in    | low       | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
 | US09        | API Register   | low      | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
@@ -42,16 +42,16 @@ Table 2: Visitor's user stories.
 | :----------:|:-------------:| :-----:|:-------|
 | col 3 is    | right-aligned | $1600 |       |
 
-### 2.3. Administrator
+### 2.3. Website Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US00    | Create Projects | high | As a Administrator, I want to create open-source projects to all users.        |
-| US00    | Delete Projects | high | As a Administrator, I want to delete projects with inappropriate content.        |
-| US00    | Remove Comments | high | As a Administrator, I want to remove comments with inappropriate content/expressions.    |
-| US00    | Accept User     | high | As an Administrator, I want to accept the registration of a new system user, so that he can access restricted content.        |
-| US00    | Ban User        | high | As an Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.    |
-| US00    | Maintenance     | low | As an Administrator, I want to be able to interrupt all activity to maintenance purposes.    |
-| US00    | General Messages| low | As an Administrator, I want to send messages to all users.    |
+| US00    | Create Projects | high | As a Website Administrator, I want to create open-source projects to all users.        |
+| US00    | Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content.        |
+| US00    | Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions.    |
+| US00    | Accept User     | high | As an Website Administrator, I want to accept the registration of a new system user, so that he can access restricted content.        |
+| US00    | Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.    |
+| US00    | Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes.    |
+| US00    | General Messages| low | As an Website Administrator, I want to send messages to all users.    |
 
 ## A1. Annex: Supplementary requirements
 
