--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -40,9 +40,30 @@ Table 2: Visitor's user stories.
 ### 2.2. User
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| col 3 is | right-aligned | $1600 | |
+| US11 | Search | high | As an User, I want to consult all the public information, so that I be informed.|
+| US12 | Profile | high | As an User, I want to change the my information, so that I can keep it updated (e.g. changing the password).|
+| US11 | Create Project | high | As an User, I want to be able to create a projects.|
+| US13 | Statistics | medium | As an User I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
 
-### 2.3. Website Administrator
+### 2.2.1 Project Member
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US11 | Create Task | high | As a contributor of a project i want to be able to add a task to the task list.|
+| US11 | Commentate Task | medium | As a contributor of a project i want to be able to provide insight into a task via commentaries|
+| US11 | Close Task | high | As a contributor of a project i want to be able to provide insight into a task via commentaries|
+| US11 | Chat in the forum | high | As a contributor of a project i want to be able to contribute to the project via the discussion forum.|
+
+### 2.2.2 Project Administrator
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US11 | Close Task | high | As a contributor of a project i want to be able to provide insight into a task via commentaries|
+
+### 2.2.2 Project Owner
+| Identifier  | Name          | Priority  | Description |
+| :----------:|:-------------:| :-----:|:-------|
+| US11 | Transfer Ownership | medium | As a owner of a project, I want to be able to transfer ownership of a project.|
+| US11 | Add project administrator| medium | As a owner of a project, I want to be able to add project administrators to help me delegate and moderate.|
+
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US00| Create Projects | high | As a Website Administrator, I want to create open-source projects to all users.|
