small fix on 2.2.3

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -64,6 +64,7 @@ Table 2: Visitor's user stories.
 | US11 | Transfer Ownership | medium | As a owner of a project, I want to be able to transfer ownership of a project.|
 | US11 | Add project administrator| medium | As a owner of a project, I want to be able to add project administrators to help me delegate and moderate.|
 
+### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US00| Create Projects | high | As a Website Administrator, I want to create open-source projects to all users.|
