--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -10,6 +10,8 @@ For the **project management**, the actors are represented in the figure below a
 
 Figure 1: actors.
 
+![user roles](https://yuml.me/a685d723.png)
+Figure 2: user roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
@@ -19,6 +21,15 @@ Figure 1: actors.
 | Api | External API's that will be used to register and authenticate into the system | Google or Facebook login |
 
 Table 1: Actor's description.
+
+| Identifier | Description | Example |
+|:----------:|:------------|:--------|
+| Project Owner | Have all the project permissions, can delete the project and manage coordinators | A project creator |
+| Project Manager | Can manage all team members and tasks | A project supervisor |
+| Project Member | Can contribute to projects, creating and solving tasks | A project member |
+
+
+Table 2: User roles.
 
 ## 2. User Stories
 
