Some more US for the project administrator

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -61,19 +61,22 @@ Table 2: Visitor's user stories.
 | :----------:|:-------------:| :-----:|:-------|
 | US11 | Create Task | high | As a contributor of a project i want to be able to add a task to the task list.|
 | US11 | Commentate Task | medium | As a contributor of a project i want to be able to provide insight into a task via commentaries|
-| US11 | Close Task | high | As a contributor of a project i want to be able to provide insight into a task via commentaries|
+| US11 | Ask to close task | high | As a contributor of a project i want to be able to signal that a task has been completed so that the project administrator can close it|
 | US11 | Chat in the forum | high | As a contributor of a project i want to be able to contribute to the project via the discussion forum.|
 
 ### 2.2.2 Project Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Close Task | high | As a contributor of a project i want to be able to provide insight into a task via commentaries|
+| US11 | Close Task | high | As a project administrator i want to be able to fully close tasks that have been completed|
+| US11 | Add project member | medium | As a project administrator i want to be able to add other project members to help complete our project|
+| US11 | Remove project member | medium | As a project administrator i want to be able to remove project members that are not able to contribute to the project|
 
-### 2.2.2 Project Owner
+### 2.2.3 Project Owner
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US11 | Transfer Ownership | medium | As a owner of a project, I want to be able to transfer ownership of a project.|
 | US11 | Add project administrator| medium | As a owner of a project, I want to be able to add project administrators to help me delegate and moderate.|
+| US11 | Delete project | low | As a owner of a project, I want to be able to delete a project.|
 
 ### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
