Improved formatting & template

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -51,32 +51,33 @@ Table 2: Visitor's user stories.
 ### 2.2. User
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Search | high | As an User, I want to consult all the public information, so that I be informed.|
-| US12 | Profile | high | As an User, I want to change the my information, so that I can keep it updated (e.g. changing the password).|
-| US11 | Create Project | high | As an User, I want to be able to create a projects.|
-| US13 | Statistics | medium | As an User I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
+| US11 | Search projects | high | As an User, I want to search through the projects that are open to me, so that ****.|
+| US12 | Edit profile | high | As an User, I want to change the my information, so that I can keep it updated (e.g. changing the password).|
+| US11 | Create project | high | As an User, I want to be able to create a project, so that ***.|
+| US13 | Statistics | low | As an User, I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
 
 ### 2.2.1 Project Member
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Create Task | high | As a contributor of a project i want to be able to add a task to the task list.|
-| US11 | Commentate Task | medium | As a contributor of a project i want to be able to provide insight into a task via commentaries|
-| US11 | Ask to close task | high | As a contributor of a project i want to be able to signal that a task has been completed so that the project administrator can close it|
-| US11 | Chat in the forum | high | As a contributor of a project i want to be able to contribute to the project via the discussion forum.|
+| US11 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
+| US11 | Commentate Task | medium | As a project member, I want to be able to commentate ask, so that i can provide insight into a task|
+| US11 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
+| US11 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it|
+| US11 | Chat in the forum | medium | As a project member, I want to be able to  chat in the forum, so that i can contribute to the project via the discussion forum.|
 
 ### 2.2.2 Project Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Close Task | high | As a project administrator i want to be able to fully close tasks that have been completed|
-| US11 | Add project member | medium | As a project administrator i want to be able to add other project members to help complete our project|
-| US11 | Remove project member | medium | As a project administrator i want to be able to remove project members that are not able to contribute to the project|
+| US11 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list|
+| US11 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can help complete our project|
+
 
 ### 2.2.3 Project Owner
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US11 | Transfer Ownership | medium | As a owner of a project, I want to be able to transfer ownership of a project.|
-| US11 | Add project administrator| medium | As a owner of a project, I want to be able to add project administrators to help me delegate and moderate.|
-| US11 | Delete project | low | As a owner of a project, I want to be able to delete a project.|
+| US11 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that i am no longer burdened by it.|
+| US11 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate.|
+| US11 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
 
 ### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
