Fixed user stories.
Fixed english, added more information.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -51,32 +51,32 @@ Table 2: Visitor's user stories.
 ### 2.2. User
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that ****.|
-| US11 | Edit profile | high | As an User, I want to change the my information, so that I can keep it updated (e.g. changing the password).|
-| US12 | Create project | high | As an User, I want to be able to create a project, so that ***.|
+| US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that I can see them.|
+| US11 | Edit profile | high | As an User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
+| US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service |
 | US13 | Statistics | low | As an User, I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
 
 ### 2.2.1 Project Member
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
-| US15 | Commentate Task | medium | As a project member, I want to be able to commentate ask, so that i can provide insight into a task|
+| US15 | Commentate Task | medium | As a project member, I want to be able to comment the ask, so that i can provide insight into a task.|
 | US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
-| US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it|
-| US18 | Chat in the forum | medium | As a project member, I want to be able to  chat in the forum, so that i can contribute to the project via the discussion forum.|
+| US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
+| US18 | Chat in the forum | medium | As a project member, I want to be able to chat in the forum, so that i can contribute to the project via the discussion forum.|
 
 ### 2.2.2 Project Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US19 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list|
-| US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can help complete our project|
+| US19 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
+| US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can contribute to our project.|
 
 
 ### 2.2.3 Project Owner
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US21 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that i am no longer burdened by it.|
-| US22 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate.|
+| US21 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
+| US22 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US23 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
 
 ### 2.2.3 Website Administrator
